アカウントページを更新しました。

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ActivityOne"></activity>
+        <activity android:name=".ActivityTwo"></activity>
+        <activity android:name=".ActivityThree"></activity>
     </application>
 
 </manifest>
