写真を変えました。また、fragmentやactivityの名前を変えました。

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,9 +18,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ActivityOne"></activity>
-        <activity android:name=".ActivityTwo"></activity>
-        <activity android:name=".ActivityThree"></activity>
+        <activity android:name=".ActivityShopping"></activity>
+        <activity android:name=".ActivityAccount"></activity>
+        <activity android:name=".ActivityPoint"></activity>
     </application>
 
 </manifest>
