Activityを消しました。また、PointFragmentにtextとbuttonを追加しました。コミット忘れてました！

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.erin.app_03">
+    package="com.erin.Everdrobe">
 
     <application
         android:allowBackup="true"
@@ -8,9 +8,9 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.App_03">
+        android:theme="@style/Theme.Everdrobe">
         <activity
-            android:name=".MainActivity"
+            android:name="com.erin.Everdrobe.MainActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
